// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiptField.vue should apply the provided filter 1`] = `
<div>
  <v-icon-stub>
    icon
  </v-icon-stub>
   
  <span
    class="receipt-field-value"
  >
    <span
      class="fixed"
    >
      VALUE
    </span>
     
    <v-form-stub
      class="form"
      style="display: none;"
    >
      <v-text-field-stub
        backgroundcolor=""
        class="edit-input receipt-field-text-field"
        clearicon="$vuetify.icons.clear"
        errorcount="1"
        errormessages=""
        height="1em"
        loaderheight="2"
        messages=""
        rules=""
        successmessages=""
        type="text"
      />
       
      <!---->
       
      <!---->
    </v-form-stub>
  </span>
</div>
`;

exports[`ReceiptField.vue should enter edit mode on double-click of the text 1`] = `
<div>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    icon
  </i>
   
  <span
    class="receipt-field-value"
  >
    <span
      class="fixed"
    >
      value
    </span>
     
    <v-form-stub
      class="form"
      style="display: none;"
    >
      <div
        class="v-input edit-input receipt-field-text-field theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
            style="height: 1em;"
          >
            <div
              class="v-text-field__slot"
            >
              <input
                id="input-20"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <span
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <!---->
    </v-form-stub>
  </span>
</div>
`;

exports[`ReceiptField.vue should enter edit mode on double-click of the text 2`] = `
<div>
  <i
    aria-hidden="true"
    class="v-icon notranslate material-icons theme--light"
  >
    icon
  </i>
   
  <span
    class="receipt-field-value"
  >
    <span
      class="fixed"
      style="display: none;"
    >
      value
    </span>
     
    <v-form-stub
      class="form"
      style=""
    >
      <div
        class="v-input edit-input receipt-field-text-field v-input--is-label-active v-input--is-dirty theme--light v-text-field"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
            style="height: 1em;"
          >
            <div
              class="v-text-field__slot"
            >
              <input
                id="input-20"
                type="text"
              />
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <span
                class="v-messages__wrapper"
                name="message-transition"
                tag="div"
              />
            </div>
          </div>
        </div>
      </div>
       
      <button
        class="v-btn v-btn--fab v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            check
          </i>
        </span>
      </button>
       
      <button
        class="v-btn v-btn--fab v-btn--flat v-btn--icon v-btn--round v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            close
          </i>
        </span>
      </button>
    </v-form-stub>
  </span>
</div>
`;

exports[`ReceiptField.vue should render correctly 1`] = `
<div>
  <v-icon-stub>
    icon
  </v-icon-stub>
   
  <span
    class="receipt-field-value"
  >
    <span
      class="fixed"
    >
      value
    </span>
     
    <v-form-stub
      class="form"
      style="display: none;"
    >
      <v-text-field-stub
        backgroundcolor=""
        class="edit-input receipt-field-text-field"
        clearicon="$vuetify.icons.clear"
        errorcount="1"
        errormessages=""
        height="1em"
        loaderheight="2"
        messages=""
        rules=""
        successmessages=""
        type="text"
      />
       
      <!---->
       
      <!---->
    </v-form-stub>
  </span>
</div>
`;

exports[`ReceiptField.vue should show red icon if required value is missing 1`] = `
<div>
  <v-icon-stub
    color="red lighten-1"
  >
    icon
  </v-icon-stub>
   
  <span
    class="receipt-field-value"
  >
    <span
      class="fixed"
    >
      
    </span>
     
    <v-form-stub
      class="form"
    >
      <v-text-field-stub
        backgroundcolor=""
        class="edit-input receipt-field-text-field"
        clearicon="$vuetify.icons.clear"
        errorcount="1"
        errormessages=""
        height="1em"
        loaderheight="2"
        messages=""
        rules=""
        successmessages=""
        type="text"
      />
       
      <!---->
       
      <!---->
    </v-form-stub>
  </span>
</div>
`;
